cluster/apps/default/photo-stream/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photo-stream
  namespace: default
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: photo-stream
