cluster/apps/default/photo-stream/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-stream
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "image-multiple"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "dns.${SECRET_LAB_DOMAIN}"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - photos.${SECRET_LAB_DOMAIN}
  rules:
    - host: photos.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-stream
                port:
                  name: http
